--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,17 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_map: ^1.1.0
-  #tuple: ^2.0.0
-  #positioned_tap_detector_2: ^1.0.4
-  #transparent_image: ^2.0.0
-  #async: ^2.8.2
-  #flutter_image: ^4.1.3
-  #vector_math: ^2.1.2
-  #proj4dart: ^2.0.0
-  #meta: ^1.7.0
-  #collection: ^1.16.0
   latlong2: ^0.8.1
-  #geocoder: ^0.2.1
+  flutter_map_line_editor: ^2.0.0
+  flutter_map_dragmarker: ^2.0.0
 
 dev_dependencies:
   flutter_test:
