--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_map_line_editor: ^2.0.0
   flutter_map_dragmarker: ^2.0.0
   location: ^4.4.0
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_test:
